single page application in angular with child routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,14 @@ Title: {{mytitle}}
 <br>
 Score: {{ score }}
 <hr>
-<app-first></app-first>
-<app-second></app-second>
-<hr>
-Parent Child Relationship in Components:
-Family Component:
-<app-family></app-family>
 
 
+
+<a routerLink="home">Home</a> &nbsp;
+<a routerLink="contact">Contact</a>&nbsp;
+<a routerLink="team">Team</a>&nbsp;
+<a routerLink="first">First</a>&nbsp;
+<a routerLink="second">Second</a>&nbsp;
+<a routerLink="family">Family</a>&nbsp;
+
+<router-outlet></router-outlet>
