--- a/src/app/spa/team/team.component.html
+++ b/src/app/spa/team/team.component.html
@@ -1,9 +1,16 @@
 <p>team works!</p>
+<div class="menu">
+    <ul >
+        <li class="item"><a routerLink="leader">Leadership</a></li>
+        <li class="item"><a routerLink="market">Marketing</a> </li>
+        <li class="item"><a routerLink="research">Research</a></li>
+        <li class="item"><a routerLink="training">Training</a></li>
+        
+    </ul>
 
-<a routerLink="leader">Leadership</a> &nbsp;
-<a routerLink="market">Marketing</a> &nbsp;
-<a routerLink="research">Research</a> &nbsp;
-<a routerLink="training">Training</a> &nbsp;
+</div>
 
 
+<div class="content">
 <router-outlet></router-outlet>
+</div>
