--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,5 +13,7 @@ Score: {{ score }}
 <a routerLink="first">First</a>&nbsp;
 <a routerLink="second">Second</a>&nbsp;
 <a routerLink="family">Family</a>&nbsp;
+<a routerLink="directive">Structural Directive</a>&nbsp;
 
 <router-outlet></router-outlet>
+
