inbuilt and custom pipes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@ Score: {{ score }}
 <a routerLink="second">Second</a>&nbsp;
 <a routerLink="family">Family</a>&nbsp;
 <a routerLink="directive">Structural Directive</a>&nbsp;
+<a routerLink="pipes">Pipes</a>&nbsp;
 
 <router-outlet></router-outlet>
 
