tempalte driven forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,7 @@ Score: {{ score }}
 <a routerLink="family">Family</a>&nbsp;
 <a routerLink="directive">Structural Directive</a>&nbsp;
 <a routerLink="pipes">Pipes</a>&nbsp;
+<a routerLink="allforms">Forms</a>&nbsp;
 
 <router-outlet></router-outlet>
 
