--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,7 @@ Score: {{ score }}
 <a routerLink="directive">Structural Directive</a>&nbsp;
 <a routerLink="pipes">Pipes</a>&nbsp;
 <a routerLink="allforms">Forms</a>&nbsp;
+<a routerLink="consumeallservices">Consume Services</a>&nbsp;
 
 <router-outlet></router-outlet>
 
