--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,7 @@ Score: {{ score }}
 <a routerLink="pipes">Pipes</a>&nbsp;
 <a routerLink="allforms">Forms</a>&nbsp;
 <a routerLink="consumeallservices">Consume Services</a>&nbsp;
+<a routerLink="remote">Get Remote Data</a>&nbsp;
 
 <router-outlet></router-outlet>
 
