json-server rest api - consume in angular for CRUD

--- a/src/app/remote/remote/remote.component.html
+++ b/src/app/remote/remote/remote.component.html
@@ -33,7 +33,7 @@
                 <button>Edit</button>
             </td>
             <td>
-                <button>Delete</button>
+                <button (click)="deleteCurrentFriend(friend.id)">Delete</button>
             </td>
         </tr>
     </tbody>
