--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,7 @@ Score: {{ score }}
 <a routerLink="allforms">Forms</a>&nbsp;
 <a routerLink="consumeallservices">Consume Services</a>&nbsp;
 <a routerLink="remote">Get Remote Data</a>&nbsp;
+<a routerLink="animate">Animate</a>&nbsp;
 
 <router-outlet></router-outlet>
 
